--- a/rush.yaml
+++ b/rush.yaml
@@ -6458,6 +6458,11 @@ sets:
     set_name: '"Dark Magician Rush Rare Special Red Version" GET Campaign'
     rarities:
     - Rush Rare
+  - set_number: RD/EV04-KR003
+    set_name: Event Pack 2023 Vol.2
+    rarities:
+    - Common
+    - Secret Rare
 yugipedia_page_id: 714467
 ---
 konami_id: 15411
@@ -51490,6 +51495,11 @@ sets:
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
     rarities:
     - Ultra Rare
+  - set_number: RD/EV04-KR004
+    set_name: Event Pack 2023 Vol.2
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -64821,6 +64831,11 @@ sets:
     set_name: Battle Pack 2022 Vol.1
     rarities:
     - Common
+  ko:
+  - set_number: RD/EV04-KR006
+    set_name: Event Pack 2023 Vol.2
+    rarities:
+    - Common
 yugipedia_page_id: 714920
 ---
 konami_id: 17556
@@ -64863,6 +64878,11 @@ sets:
   ja:
   - set_number: RD/B221-JP008
     set_name: Battle Pack 2022 Vol.1
+    rarities:
+    - Common
+  ko:
+  - set_number: RD/EV04-KR008
+    set_name: Event Pack 2023 Vol.2
     rarities:
     - Common
 yugipedia_page_id: 713050
@@ -64909,6 +64929,11 @@ sets:
     set_name: Battle Pack 2022 Vol.1
     rarities:
     - Common
+  ko:
+  - set_number: RD/EV04-KR007
+    set_name: Event Pack 2023 Vol.2
+    rarities:
+    - Common
 yugipedia_page_id: 710809
 ---
 konami_id: 17558
@@ -64953,6 +64978,11 @@ sets:
     set_name: Battle Pack 2022 Vol.1
     rarities:
     - Common
+  ko:
+  - set_number: RD/EV04-KR009
+    set_name: Event Pack 2023 Vol.2
+    rarities:
+    - Common
 yugipedia_page_id: 715295
 ---
 konami_id: 17559
@@ -64995,6 +65025,11 @@ sets:
   ja:
   - set_number: RD/B221-JP010
     set_name: Battle Pack 2022 Vol.1
+    rarities:
+    - Common
+  ko:
+  - set_number: RD/EV04-KR010
+    set_name: Event Pack 2023 Vol.2
     rarities:
     - Common
 yugipedia_page_id: 715015
@@ -71376,6 +71411,11 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Rare
+  - set_number: RD/EV04-KR002
+    set_name: Event Pack 2023 Vol.2
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
@@ -71763,6 +71803,12 @@ sets:
     rarities:
     - Common
     - Super Rare
+  ko:
+  - set_number: RD/EV04-KR001
+    set_name: Event Pack 2023 Vol.2
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -71866,6 +71912,11 @@ sets:
     set_name: Battle Pack 2022 Vol.2
     rarities:
     - Common
+  ko:
+  - set_number: RD/EV04-KR011
+    set_name: Event Pack 2023 Vol.2
+    rarities:
+    - Common
 is_translation_unofficial:
   name:
     en: true
@@ -71915,6 +71966,11 @@ sets:
   ja:
   - set_number: RD/B222-JP007
     set_name: Battle Pack 2022 Vol.2
+    rarities:
+    - Common
+  ko:
+  - set_number: RD/EV04-KR012
+    set_name: Event Pack 2023 Vol.2
     rarities:
     - Common
 is_translation_unofficial:
@@ -91239,6 +91295,12 @@ sets:
     - Common
     - Super Rare
     - Ultra Rare
+  ko:
+  - set_number: RD/EV04-KR005
+    set_name: Event Pack 2023 Vol.2
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
@@ -108532,7 +108594,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 7 or higher WIND Attribute monster and 1 Warrior Type Normal Monster from your Graveyard to your hand.  This turn, you cannot activate monster effects, except WIND Attribute Warrior Type or Beast Type monsters'.
+    Add 1 Level 7 or higher WIND Attribute monster and 1 Warrior Type Normal Monster from your Graveyard to your hand. This turn, you cannot activate monster effects, except WIND Attribute Warrior Type or Beast Type monsters.
   de:
   es:
   fr:
@@ -120426,7 +120488,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ５００ＬＰを払って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -120438,7 +120501,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地の「ギフトタリスト」「ロミックンローラー」「ベリーシスト」「ドリームラマー」「キャッチーボーディスト」をそれぞれ１体まで選び、自分フィールドに表側表示で特殊召喚する。このターン、自分はモンスター（オメガサイキック族・サイキック族）でしか攻撃できない。
   ko:
   zh-TW:
   zh-CN:
