--- a/data/cards/16024176.yaml
+++ b/data/cards/16024176.yaml
@@ -6,7 +6,7 @@ name:
   es: Flor Cardian Pino con Grulla
   fr: Fleur Cardian Pin avec Grue
   it: Fiore Cardian Pino con Gru
-  pt: Flore Cardian Pinho com Guindaste
+  pt: Flor Cardian Pinho com Guindaste
   ja: <ruby>花札衛<rt>カーディアン</rt></ruby>－<ruby>松<rt>まつ</rt></ruby>に<ruby>鶴<rt>つる</rt></ruby>－
   ja_romaji: Kādian - Matsu ni Tsuru -
   ko: 카디언－소나무에 학－
