--- a/data/rush/16292.yaml
+++ b/data/rush/16292.yaml
@@ -2,7 +2,7 @@ konami_id: 16292
 name:
   en: Bean Soldier
   de: Bohnensoldat
-  es: Soldado judía
+  es: Soldado Judía
   fr: Soldat Haricot
   it: Soldato a Fagiolo
   pt:
