--- a/data/rush/16925.yaml
+++ b/data/rush/16925.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Send 1 monster on your field to the Graveyard.
+    Send 1 monster from your field to the Graveyard.
   de:
   es:
   fr:
