--- a/data/cards/03461403.yaml
+++ b/data/cards/03461403.yaml
@@ -1,7 +1,7 @@
 konami_id: 19209
 password: 3461403
 name:
-  en: Lament of the Immortal Bushi
+  en: The Immortal Bushi Mourns the Mortal Body
   de:
   es:
   fr:
@@ -32,7 +32,7 @@ card_type: Spell
 property: Continuous
 images:
 - index: 1
-  image: LamentoftheImmortalBushi-AGOV-JP-NR.png
+  image: TheImmortalBushiMournstheMortalBody-AGOV-JP-NR.png
 sets:
   ja:
   - set_number: AGOV-JP067
@@ -48,8 +48,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 994630
