--- a/data/cards/06278008.yaml
+++ b/data/cards/06278008.yaml
@@ -1,7 +1,7 @@
 konami_id: 19221
 password: 6278008
 name:
-  en: Seishou Ruten
+  en: Starry Dragon's Cycle
   de:
   es:
   fr:
@@ -20,7 +20,7 @@ text:
     ● Synchro: A monster with a lower Level than the returned monster.
     ● Xyz: A monster with a Level equal to the returned monster's Rank.
     ● Link: A monster with the same Type as the returned monster.
-    You can only activate 1 "Seishou Ruten" per turn.
+    You can only activate 1 "Starry Dragon's Cycle" per turn.
   de:
   es:
   fr:
@@ -41,7 +41,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: SeishouRuten-AGOV-JP-R.png
+  image: StarryDragonsCycle-AGOV-JP-R.png
 sets:
   ja:
   - set_number: AGOV-JP079
@@ -57,8 +57,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 994631
