--- a/data/cards/07930346.yaml
+++ b/data/cards/07930346.yaml
@@ -1,7 +1,7 @@
 konami_id: 19169
 password: 7930346
 name:
-  en: Oriori no Kamigami
+  en: Origami Goddess
   de:
   es:
   fr:
@@ -36,7 +36,7 @@ atk: 100
 def: 0
 images:
 - index: 1
-  image: OriorinoKamigami-AGOV-JP-NR.png
+  image: OrigamiGoddess-AGOV-JP-NR.png
 sets:
   ja:
   - set_number: AGOV-JP027
@@ -52,8 +52,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 994628
