--- a/data/cards/34541543.yaml
+++ b/data/cards/34541543.yaml
@@ -1,7 +1,7 @@
 konami_id: 19167
 password: 34541543
 name:
-  en: Tao the Great Chanter
+  en: Master Tao the Chanter
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 大阴阳师 道
 text:
   en: |-
-    If this card battles a monster, neither can be destroyed by that battle. If this card is sent to the GY: You can target 1 Illusion monster in your GY, except "Tao the Great Chanter"; Special Summon it in Defense Position, also you cannot Special Summon monsters from the GY for the rest of this turn, except Illusion monsters. You can only use this effect of "Tao the Great Chanter" once per turn.
+    If this card battles a monster, neither can be destroyed by that battle. If this card is sent to the GY: You can target 1 Illusion monster in your GY, except "Master Tao the Chanter"; Special Summon it in Defense Position, also you cannot Special Summon monsters from the GY for the rest of this turn, except Illusion monsters. You can only use this effect of "Master Tao the Chanter" once per turn.
   de:
   es:
   fr:
@@ -37,7 +37,7 @@ atk: 1200
 def: 900
 images:
 - index: 1
-  image: TaotheGreatChanter-AGOV-JP-C.png
+  image: MasterTaotheChanter-AGOV-JP-C.png
 sets:
   ja:
   - set_number: AGOV-JP025
@@ -53,8 +53,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 994625
