--- a/data/cards/38511382.yaml
+++ b/data/cards/38511382.yaml
@@ -1,7 +1,7 @@
 konami_id: 19216
 password: 38511382
 name:
-  en: Sinful Spoils of Betrayal - Silvia
+  en: Sinful Spoils of Betrayal - Silvera
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 背叛之罪宝－西尔维亚
 text:
   en: |-
-    Send 1 "Diabellestarr" monster from your hand or face-up field to the GY, then target 1 face-up card on the field; negate its effects. When your opponent activates a card or effect in response to the activation of your "Diabellestarr" monster's effect or "Sinful Spoils" Spell/Trap Card or effect: You can banish this card from your GY; negate that opponent's effect. You can only use 1 "Sinful Spoils of Betrayal - Silvia" effect per turn, and only once that turn.
+    Send 1 "Diabellstar" monster from your hand or face-up field to the GY, then target 1 face-up card on the field; negate its effects. When your opponent activates a card or effect in response to the activation of your "Diabellstar" monster's effect or "Sinful Spoils" Spell/Trap Card or effect: You can banish this card from your GY; negate that opponent's effect. You can only use 1 "Sinful Spoils of Betrayal - Silvera" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -35,7 +35,7 @@ series:
 - Sinful Spoils
 images:
 - index: 1
-  image: SinfulSpoilsofBetrayalSilvia-AGOV-JP-R.png
+  image: SinfulSpoilsofBetrayalSilvera-AGOV-JP-R.png
 sets:
   ja:
   - set_number: AGOV-JP074
@@ -51,8 +51,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 992308
