--- a/data/cards/46485778.yaml
+++ b/data/cards/46485778.yaml
@@ -1,7 +1,7 @@
 konami_id: 19161
 password: 46485778
 name:
-  en: Poissoniere de Nouvelles
+  en: Poissonniere de Nouvelles
   de:
   es:
   fr:
@@ -18,7 +18,7 @@ text:
     If this card on the field is Tributed and added to the Extra Deck face-up: You can place this card in your Pendulum Zone. If this card is Normal or Special Summoned: You can activate 1 of these effects;
     ● Add 1 Level 1 Ritual Monster or 1 "Recipe" card from your Deck to your hand.
     ● Banish any number of "Recipe" cards from your GY, and if you do, Special Summon 1 "Nouvelles" Ritual Monster from your hand with a Level equal to the number banished.
-    You can only use this effect of "Poissoniere de Nouvelles" once per turn.
+    You can only use this effect of "Poissonniere de Nouvelles" once per turn.
   de:
   es:
   fr:
@@ -43,7 +43,7 @@ def: 1700
 pendulum_scale: 8
 pendulum_effect:
   en: |-
-    If you control a Ritual Monster: You can target 1 monster on the field; Special Summon this card, then change the targeted monster's battle position. You can only use this effect of "Poissoniere de Nouvelles" once per turn.
+    If you control a Ritual Monster: You can target 1 monster on the field; Special Summon this card, then change the targeted monster's battle position. You can only use this effect of "Poissonniere de Nouvelles" once per turn.
   de:
   es:
   fr:
@@ -60,7 +60,7 @@ series:
 - Nouvelles
 images:
 - index: 1
-  image: PoissonieredeNouvelles-AGOV-JP-SR.png
+  image: PoissonnieredeNouvelles-AGOV-JP-SR.png
 sets:
   ja:
   - set_number: AGOV-JP019
@@ -90,8 +90,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 980574
