--- a/data/cards/54851325.yaml
+++ b/data/cards/54851325.yaml
@@ -1,7 +1,7 @@
 konami_id: 19195
 password: 54851325
 name:
-  en: Planetary Eulogy
+  en: Realm Eulogy
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 世坏赞歌
 text:
   en: |-
-    Target 1 monster you control and 1 Effect Monster your opponent controls; destroy that monster you control, and if you do, negate that opponent's monster's effects (until the end of this turn), then, if "Visas Starfrost" is on the field, you can destroy the targeted monster. During your Main Phase, if a "Veda" Monster Card is on the field: You can banish this card from your GY; destroy 1 monster you control. You can only use each effect of "Planetary Eulogy" once per turn.
+    Target 1 monster you control and 1 Effect Monster your opponent controls; destroy that monster you control, and if you do, negate that opponent's monster's effects (until the end of this turn), then, if "Visas Starfrost" is on the field, you can destroy the targeted monster. During your Main Phase, if a "Veda" Monster Card is on the field: You can banish this card from your GY; destroy 1 monster you control. You can only use each effect of "Realm Eulogy" once per turn.
   de:
   es:
   fr:
@@ -33,7 +33,7 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
-  image: PlanetaryEulogy-AGOV-JP-C.png
+  image: RealmEulogy-AGOV-JP-C.png
 sets:
   ja:
   - set_number: AGOV-JP053
@@ -49,8 +49,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 978654
