--- a/data/cards/69601012.yaml
+++ b/data/cards/69601012.yaml
@@ -1,7 +1,7 @@
 konami_id: 19174
 password: 69601012
 name:
-  en: Berfomet the Phantom Beast Dark Ruler
+  en: Berfomet the Mythical King of Phantom Beasts
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Beast, Fiend, and/or Illusion monsters with different Types
-    This card's name becomes "Chimera the Flying Mythical Beast" while on the field or in the GY. You can only use each of the following effects of "Berfomet the Phantom Beast Dark Ruler" once per turn. If this card is Fusion Summoned: You can send 1 Beast, Fiend, or Illusion monster from your Deck to the GY. During your opponent's turn (Quick Effect): You can banish this card from your GY, then target 1 of your banished Beast, Fiend, or Illusion monsters, except "Berfomet the Phantom Beast Dark Ruler"; Special Summon it.
+    This card's name becomes "Chimera the Flying Mythical Beast" while on the field or in the GY. You can only use each of the following effects of "Berfomet the Mythical King of Phantom Beasts" once per turn. If this card is Fusion Summoned: You can send 1 Beast, Fiend, or Illusion monster from your Deck to the GY. During your opponent's turn (Quick Effect): You can banish this card from your GY, then target 1 of your banished Beast, Fiend, or Illusion monsters, except "Berfomet the Mythical King of Phantom Beasts"; Special Summon it.
   de:
   es:
   fr:
@@ -45,7 +45,7 @@ series:
 - Phantom Beast
 images:
 - index: 1
-  image: BerfometthePhantomBeastDarkRuler-AGOV-JP-SR.png
+  image: BerfomettheMythicalKingofPhantomBeasts-AGOV-JP-SR.png
 sets:
   ja:
   - set_number: AGOV-JP032
@@ -75,8 +75,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 992243
