--- a/data/cards/71545247.yaml
+++ b/data/cards/71545247.yaml
@@ -1,7 +1,7 @@
 konami_id: 19168
 password: 71545247
 name:
-  en: Hanayome Ningyo
+  en: Cursed Bride Doll
   de:
   es:
   fr:
@@ -37,7 +37,7 @@ atk: 0
 def: 2100
 images:
 - index: 1
-  image: HanayomeNingyo-AGOV-JP-C.png
+  image: CursedBrideDoll-AGOV-JP-C.png
 sets:
   ja:
   - set_number: AGOV-JP026
@@ -53,8 +53,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 994627
