--- a/data/cards/71768839.yaml
+++ b/data/cards/71768839.yaml
@@ -1,7 +1,7 @@
 konami_id: 19165
 password: 71768839
 name:
-  en: Invasive Alien Species - I.A.S
+  en: I.A.S. -Invasive Alien Species-
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 入侵物种外星人－I.A.S
 text:
   en: |-
-    Cannot be destroyed by battle or card effects while a face-up card is in your opponent's Field Zone. You can only use each of the following effects of "Invasive Alien Species - I.A.S" once per turn. If a face-up card is in your opponent's Field Zone: You can target 1 monster your opponent controls; destroy it, and if you do, this card gains 1000 ATK. If a face-up card is in your opponent's Field Zone and this card is in your GY: You can Special Summon this card.
+    Cannot be destroyed by battle or card effects while a face-up card is in your opponent's Field Zone. You can only use each of the following effects of "I.A.S. -Invasive Alien Species-" once per turn. If a face-up card is in your opponent's Field Zone: You can target 1 monster your opponent controls; destroy it, and if you do, this card gains 1000 ATK. If a face-up card is in your opponent's Field Zone and this card is in your GY: You can Special Summon this card.
   de:
   es:
   fr:
@@ -40,7 +40,7 @@ series:
 - Alien
 images:
 - index: 1
-  image: InvasiveAlienSpeciesIAS-AGOV-JP-C.png
+  image: IASInvasiveAlienSpecies-AGOV-JP-C.png
 sets:
   ja:
   - set_number: AGOV-JP023
@@ -56,8 +56,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 994622
