--- a/data/cards/75728539.yaml
+++ b/data/cards/75728539.yaml
@@ -1,7 +1,7 @@
 konami_id: 19214
 password: 75728539
 name:
-  en: Sarv Sarga
+  en: Sharv Sarga
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 新世坏回
 text:
   en: |-
-    If "Visas Starfrost" is on the field: Target 1 Effect Monster on the field; shuffle that target into the Deck, and if you do, during the End Phase of this turn, its owner can add 1 monster from their Deck to their hand with a different Type and a lower Level than the shuffled monster's Level/Rank/Link Rating. If a "Veda" monster(s) is Special Summoned while this card is in your GY (except during the Damage Step): You can add this card to your hand. You can only use each effect of "Sarv Sarga" once per turn.
+    If "Visas Starfrost" is on the field: Target 1 Effect Monster on the field; shuffle that target into the Deck, and if you do, during the End Phase of this turn, its owner can add 1 monster from their Deck to their hand with a different Type and a lower Level than the shuffled monster's Level/Rank/Link Rating. If a "Veda" monster(s) is Special Summoned while this card is in your GY (except during the Damage Step): You can add this card to your hand. You can only use each effect of "Sharv Sarga" once per turn.
   de:
   es:
   fr:
@@ -33,7 +33,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: SarvSarga-AGOV-JP-C.png
+  image: SharvSarga-AGOV-JP-C.png
 sets:
   ja:
   - set_number: AGOV-JP072
@@ -49,8 +49,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 978656
