--- a/data/cards/78789356.yaml
+++ b/data/cards/78789356.yaml
@@ -1,7 +1,7 @@
 konami_id: 19205
 password: 78789356
 name:
-  en: Ogdoadic Dawn of Creation
+  en: Ogdoadic Daybreak
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 黎溟界辟
 text:
   en: |-
-    Tribute 1 Reptile monster; Special Summon up to 1 "Ogdoadic Token" (Reptile/DARK/Level 2/ATK 0/DEF 0) for every 2 Levels the Tributed monster had on the field. During your Main Phase: You can banish this card from your GY, then target 1 of your banished Reptile monsters; shuffle it into the Deck, then you can send 1 Reptile monster from your Deck to the GY. You can only use each effect of "Ogdoadic Dawn of Creation" once per turn.
+    Tribute 1 Reptile monster; Special Summon up to 1 "Ogdoadic Token" (Reptile/DARK/Level 2/ATK 0/DEF 0) for every 2 Levels the Tributed monster had on the field. During your Main Phase: You can banish this card from your GY, then target 1 of your banished Reptile monsters; shuffle it into the Deck, then you can send 1 Reptile monster from your Deck to the GY. You can only use each effect of "Ogdoadic Daybreak" once per turn.
   de:
   es:
   fr:
@@ -35,7 +35,7 @@ series:
 - Ogdoadic
 images:
 - index: 1
-  image: OgdoadicDawnofCreation-AGOV-JP-C.png
+  image: OgdoadicDaybreak-AGOV-JP-C.png
 sets:
   ja:
   - set_number: AGOV-JP063
@@ -51,8 +51,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 984311
