--- a/data/cards/95095116.yaml
+++ b/data/cards/95095116.yaml
@@ -1,7 +1,7 @@
 konami_id: 19175
 password: 95095116
 name:
-  en: Gaia Prominence, the Kindling Seraph
+  en: Gaia Prominence, the Fierce Force
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     "Gaia Blaze, the Force of the Sun" + 1 face-up monster you control
-    When your opponent activates a monster effect in the hand or GY (Quick Effect): You can discard 1 monster; negate that effect, and if you do, destroy that card. When this attacking card destroys an opponent's monster by battle: You can target 1 FIRE monster in your GY; Special Summon it. You can only use each effect of "Gaia Prominence, the Kindling Seraph" once per turn.
+    When your opponent activates a monster effect in the hand or GY (Quick Effect): You can discard 1 monster; negate that effect, and if you do, destroy that card. When this attacking card destroys an opponent's monster by battle: You can target 1 FIRE monster in your GY; Special Summon it. You can only use each effect of "Gaia Prominence, the Fierce Force" once per turn.
   de:
   es:
   fr:
@@ -43,7 +43,7 @@ series:
 - Gaia Knight
 images:
 - index: 1
-  image: GaiaProminencetheKindlingSeraph-AGOV-JP-R.png
+  image: GaiaProminencetheFierceForce-AGOV-JP-R.png
 sets:
   ja:
   - set_number: AGOV-JP033
@@ -59,8 +59,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 991268
