--- a/data/cards/00402568.yaml
+++ b/data/cards/00402568.yaml
@@ -12,7 +12,7 @@ name:
   ko: 일렉기린
   ko_rr:
   zh-TW:
-  zh-CN: 电气长颈鹿
+  zh-CN: 电力长颈鹿
 text:
   en: |-
     This card can attack your opponent directly. If this card inflicts battle damage to your opponent by a direct attack: Your opponent cannot activate cards or effects until the end of this turn.
@@ -32,7 +32,8 @@ text:
     이 카드는 상대 플레이어에게 직접 공격할 수 있다. 이 카드가 직접 공격에 의해서 상대 라이프에 전투 데미지를 주었을 때, 상대는 이 턴의 엔드 페이즈시까지 마법/함정/효과 몬스터의 효과를 발동할 수 없다.
   zh-TW:
   zh-CN: |-
-    这张卡可以直接攻击对方玩家。这张卡直接攻击给与对方基本分战斗伤害时，对方直到这个回合的结束阶段时不能把魔法·陷阱·效果怪兽的效果发动。
+    ①：此卡可直接攻击。
+    ②：此卡以直接攻击给予对手战斗伤害的情况下发动。此回合，对手不可发动魔法・陷阱・怪兽的效果。
 card_type: Monster
 monster_type_line: Thunder / Effect
 attribute: LIGHT
