--- a/data/cards/14283055.yaml
+++ b/data/cards/14283055.yaml
@@ -1,21 +1,21 @@
 konami_id: 19206
 password: 14283055
 name:
-  en: Concours de Cuisine (Confectionery Contest)
+  en: Concours de Cuisine (Culinary Confrontation)
   de:
   es:
   fr:
   it:
   pt:
   ja: <ruby>Ｃｏｎｃｏｕｒｓ ｄｅ Ｃｕｉｓｉｎｅ<rt>コンクール・ド・キュイジーヌ</rt></ruby>～<ruby>菓<rt>か</rt></ruby><ruby>冷<rt>れい</rt></ruby>なる<ruby>料<rt>りょう</rt></ruby><ruby>理<rt>り</rt></ruby><ruby>対<rt>たい</rt></ruby><ruby>決<rt>けつ</rt></ruby>～
-  ja_romaji: Konkūru Do Kyuijīnu ~ Kaireinaru Ryōri Taiketsu ~
+  ja_romaji: Konkūru Do Kyuijīnu ~ Kareinaru Ryōri Taiketsu ~
   ko:
   ko_rr:
   zh-TW:
   zh-CN: Concours de Cuisine～糕冷料理对决～
 text:
   en: |-
-    Special Summon both 1 "Nouvelles" Pendulum Monster and 1 "Patissciel" Pendulum Monster from your hand, Deck, and/or Extra Deck, 1 on each field, also you cannot use monsters as material for a Fusion, Synchro, Xyz, or Link Summon for the rest of this turn, except "Nouvelles" and "Patissciel" monsters. During your Main Phase: You can banish this card from your GY, then target 1 face-up monster on the field; it gains 200 ATK for each "Recipe" card in the GYs. You can only use each effect of "Concours de Cuisine (Confectionery Contest)" once per turn.
+    Special Summon both 1 "Nouvelles" Pendulum Monster and 1 "Patissciel" Pendulum Monster from your hand, Deck, and/or Extra Deck, 1 on each field, also you cannot use monsters as material for a Fusion, Synchro, Xyz, or Link Summon for the rest of this turn, except "Nouvelles" and "Patissciel" monsters. During your Main Phase: You can banish this card from your GY, then target 1 face-up monster on the field; it gains 200 ATK for each "Recipe" card in the GYs. You can only use each effect of "Concours de Cuisine (Culinary Confrontation)" once per turn.
   de:
   es:
   fr:
@@ -33,7 +33,7 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
-  image: ConcoursdeCuisine(ConfectioneryContest)-AGOV-JP-C.png
+  image: ConcoursdeCuisine(CulinaryConfrontation)-AGOV-JP-C.png
 sets:
   ja:
   - set_number: AGOV-JP064
@@ -49,8 +49,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 980577
