--- a/data/cards/33499794.yaml
+++ b/data/cards/33499794.yaml
@@ -1,7 +1,7 @@
 konami_id: 19219
 password: 33499794
 name:
-  en: Nemleria Repette
+  en: Nemleria Repeter
   de:
   es:
   fr:
@@ -19,7 +19,7 @@ text:
     ● 1: Add 1 "Nemleria" card from your GY to your hand.
     ● 2: Any damage you take this turn is halved.
     ● 3: Send 1 Level 10 Beast monster you control to the GY, and if you do, negate the effects of all face-up monsters your opponent currently controls until the end of this turn.
-    You can only use this effect of "Nemleria Repette" once per turn.
+    You can only use this effect of "Nemleria Repeter" once per turn.
   de:
   es:
   fr:
@@ -41,7 +41,7 @@ series:
 - Nemleria
 images:
 - index: 1
-  image: NemleriaRepette-AGOV-JP-C.png
+  image: NemleriaRepeter-AGOV-JP-C.png
 sets:
   ja:
   - set_number: AGOV-JP077
@@ -57,8 +57,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 991832
