--- a/data/cards/40678060.yaml
+++ b/data/cards/40678060.yaml
@@ -1,7 +1,7 @@
 konami_id: 19207
 password: 40678060
 name:
-  en: Angel Ring
+  en: Angelica's Angelic Ring
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 天子的指环
 text:
   en: |-
-    Equip only to a monster you control that is equipped with an Equip Card. You can only control 1 "Angel Ring". Negate the effect of your opponent's first Spell Card or effect that resolves each turn. Once per turn, while this card is equipped to a monster: You can gain 500 LP, then destroy this card, and if you do, apply this effect.
+    Equip only to a monster you control that is equipped with an Equip Card. You can only control 1 "Angelica's Angelic Ring". Negate the effect of your opponent's first Spell Card or effect that resolves each turn. Once per turn, while this card is equipped to a monster: You can gain 500 LP, then destroy this card, and if you do, apply this effect.
     ● While the monster this card was equipped to is face-up in the Monster Zone, your opponent cannot target it with card effects.
   de:
   es:
@@ -36,7 +36,7 @@ card_type: Spell
 property: Equip
 images:
 - index: 1
-  image: AngelRing-AGOV-JP-R.png
+  image: AngelicasAngelicRing-AGOV-JP-R.png
 sets:
   ja:
   - set_number: AGOV-JP065
@@ -52,8 +52,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 71685
