--- a/data/cards/46518210.yaml
+++ b/data/cards/46518210.yaml
@@ -1,7 +1,7 @@
 konami_id: 19158
 password: 46518210
 name:
-  en: Neferabyss, the Ogdoadic Overlord
+  en: Nephilabyss, the Ogdoadic Overlord
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 溟界神－涅斐尔邃渊
 text:
   en: |-
-    If a monster(s) is sent from the hand and/or Deck to the GY while this card is in your GY (except during the Damage Step): You can Special Summon this card, also you cannot Special Summon monsters until the end of the next turn, except Reptile monsters. If you control this card that was Special Summoned from the GY: You can target 1 monster in your GY, except "Neferabyss, the Ogdoadic Overlord"; Special Summon it. You can only use each effect of "Neferabyss, the Ogdoadic Overlord" once per turn.
+    If a monster(s) is sent from the hand and/or Deck to the GY while this card is in your GY (except during the Damage Step): You can Special Summon this card, also you cannot Special Summon monsters until the end of the next turn, except Reptile monsters. If you control this card that was Special Summoned from the GY: You can target 1 monster in your GY, except "Nephilabyss, the Ogdoadic Overlord"; Special Summon it. You can only use each effect of "Nephilabyss, the Ogdoadic Overlord" once per turn.
   de:
   es:
   fr:
@@ -40,7 +40,7 @@ series:
 - Ogdoadic
 images:
 - index: 1
-  image: NeferabysstheOgdoadicOverlord-AGOV-JP-SR.png
+  image: NephilabysstheOgdoadicOverlord-AGOV-JP-SR.png
 sets:
   ja:
   - set_number: AGOV-JP016
@@ -70,8 +70,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 984310
