--- a/data/cards/80845034.yaml
+++ b/data/cards/80845034.yaml
@@ -1,7 +1,7 @@
 konami_id: 19196
 password: 80845034
 name:
-  en: '"The Sinful Spoils Hunter Fiend"'
+  en: 'WANTED: Seeker of Sinful Spoils'
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: “狩猎罪宝的魔鬼”
 text:
   en: |-
-    Add 1 "Diabellestarr" monster from your Deck or GY to your hand. During your Main Phase: You can banish this card from your GY, then target 1 of your "Sinful Spoils" Spells/Traps that is banished or in your GY, except ""The Sinful Spoils Hunter Fiend""; place it on the bottom of the Deck, then draw 1 card. You can only use each effect of ""The Sinful Spoils Hunter Fiend"" once per turn.
+    Add 1 "Diabellstar" monster from your Deck or GY to your hand. During your Main Phase: You can banish this card from your GY, then target 1 of your "Sinful Spoils" Spells/Traps that is banished or in your GY, except "WANTED: Seeker of Sinful Spoils"; place it on the bottom of the Deck, then draw 1 card. You can only use each effect of "WANTED: Seeker of Sinful Spoils" once per turn.
   de:
   es:
   fr:
@@ -35,7 +35,7 @@ series:
 - Sinful Spoils
 images:
 - index: 1
-  image: TheSinfulSpoilsHunterFiend-AGOV-JP-R.png
+  image: WANTEDSeekerofSinfulSpoils-AGOV-JP-R.png
 sets:
   ja:
   - set_number: AGOV-JP054
@@ -51,8 +51,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 992302
