--- a/data/cards/88901994.yaml
+++ b/data/cards/88901994.yaml
@@ -27,7 +27,7 @@ text:
   zh-TW:
   zh-CN: |-
     此卡名的卡１回合仅可发动１张。
-    ①：以自己墓地的１只协调或同步怪兽为对象可以发动。将该怪兽以守备表示特殊召唤。只要以此效果特殊召唤的怪兽以表侧表示存在于自己场上，自己从额外牌组仅可特殊召唤同步怪兽。
+    ①：以自己墓地的１只协调或等级７・８的龙族同步怪兽为对象可以发动。将该怪兽以守备表示特殊召唤。此卡发动后，直至回合结束时为止，自己从额外牌组仅可特殊召唤同步怪兽。
     ②：自己场上的“赤龙”或等级７・８的龙族同步怪兽将被战斗・效果破坏的情况下，作为代替可将墓地的此卡除外。
 card_type: Spell
 property: Normal
