--- a/data/rush/15174.yaml
+++ b/data/rush/15174.yaml
@@ -68,6 +68,10 @@ sets:
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Common
+  - set_number: RD/MRP2-JP035
+    set_name: Megaroad Pack 2
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/ST02-KR011
     set_name: Starter Deck Luke - Explosive Supremacy! Dragias!!
