--- a/data/rush/yugipedia1019283.yaml
+++ b/data/rush/yugipedia1019283.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード以外の自分の魔法＆罠ゾーンのカード１枚を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は１枚ドローする。その後、手札のモンスター（闇属性／魔法使い族／攻撃力２０００または２５００）１体を相手に見せる事ができる。見せた場合、さらに自分は１枚ドローする。
   ko:
   zh-TW:
   zh-CN:
@@ -46,6 +48,7 @@ sets:
   - set_number: RD/MRP2-JP085
     set_name: Megaroad Pack 2
     rarities:
+    - Common
 is_translation_unofficial:
   name:
     en: true
