--- a/data/rush/16611.yaml
+++ b/data/rush/16611.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your opponent's field loses 500 ATK until the end of this turn. Then, if your opponent's LP are at least 2000 higher than yours, that monster loses 1500 more ATK until the end of this turn.
+    1 face-up monster on your opponent's field loses 500 ATK until the end of this turn. Then, if your opponent's LP are at least 2000 higher than yours, that monster loses additional 1500 ATK until the end of this turn.
   de:
   es:
   fr:
