--- a/data/rush/18272.yaml
+++ b/data/rush/18272.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains ATK equal to [the number of face-up Normal Monsters on your field] x 300. If the equipped monster is "Galactica Oblivion", it gains 1000 more ATK.
+    The equipped monster gains ATK equal to [the number of face-up Normal Monsters on your field] x 300. If the equipped monster is "Galactica Oblivion", it gains additional 1000 ATK.
   de:
   es:
   fr:
