--- a/rush.yaml
+++ b/rush.yaml
@@ -35885,7 +35885,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your opponent's field loses 500 ATK until the end of this turn. Then, if your opponent's LP are at least 2000 higher than yours, that monster loses 1500 more ATK until the end of this turn.
+    1 face-up monster on your opponent's field loses 500 ATK until the end of this turn. Then, if your opponent's LP are at least 2000 higher than yours, that monster loses additional 1500 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -44182,7 +44182,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Level 9 LIGHT Attribute monster or 1 face-up LIGHT Attribute Normal Monster on your field gains 500 ATK until the end of this turn. Then, if you have "Imaginary Actor" in your Graveyard, that monster gains 1000 more ATK until the end of this turn.
+    1 face-up Level 9 LIGHT Attribute monster or 1 face-up LIGHT Attribute Normal Monster on your field gains 500 ATK until the end of this turn. Then, if you have "Imaginary Actor" in your Graveyard, that monster gains additional 1000 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -53463,7 +53463,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Level 6 or higher DARK Attribute Spellcaster Type monster on your field gains 1000 ATK until the end of this turn. Then, if you have "Dark Magician" or "Dark Magician Girl" face-up on your field, that Level 6 or higher DARK Attribute Spellcaster Type monster gains 1000 more ATK until the end of this turn.
+    1 face-up Level 6 or higher DARK Attribute Spellcaster Type monster on your field gains 1000 ATK until the end of this turn. Then, if you have "Dark Magician" or "Dark Magician Girl" face-up on your field, that Level 6 or higher DARK Attribute Spellcaster Type monster gains additional 1000 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -83418,7 +83418,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains ATK equal to [the number of face-up Normal Monsters on your field] x 300. If the equipped monster is "Galactica Oblivion", it gains 1000 more ATK.
+    The equipped monster gains ATK equal to [the number of face-up Normal Monsters on your field] x 300. If the equipped monster is "Galactica Oblivion", it gains additional 1000 ATK.
   de:
   es:
   fr:
@@ -106125,7 +106125,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 400 ATK and cannot be destroyed by your opponent's card effects. If the equipped monster is a Fusion Monster, it gains 600 more ATK.
+    The equipped monster gains 400 ATK and cannot be destroyed by your opponent's card effects. If the equipped monster is a Fusion Monster, it gains additional 600 ATK.
   de:
   es:
   fr:
@@ -109737,7 +109737,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 500 ATK. Then, if you have 5 or more Wyrm Type monsters in your Graveyard, the equipped monster gains 500 more ATK.
+    The equipped monster gains 500 ATK. If you have 5 or more Wyrm Type monsters in your Graveyard, the equipped monster gains additional 500 ATK.
   de:
   es:
   fr:
@@ -116912,7 +116912,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Dragon Type monster on your field gains 500 ATK until the end of this turn. Then, if it was "Twin Edge Dragon", it gains 500 more ATK until the end of this turn.
+    1 face-up Dragon Type monster on your field gains 500 ATK until the end of this turn. Then, if it was "Twin Edge Dragon", it gains additional 500 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -118177,7 +118177,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the number of Spell Cards in your Graveyard] x 100. Also, if you have 5 or more Spell Cards in your Graveyard, this card gains 500 more ATK.
+    This card gains ATK equal to [the number of Spell Cards in your Graveyard] x 100. Also, if you have 5 or more Spell Cards in your Graveyard, this card gains additional 500 ATK.
   de:
   es:
   fr:
