--- a/data/cards/25131968.yaml
+++ b/data/cards/25131968.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 25131968
 name:
   en: Ken the Warrior Dragon
   de:
@@ -64,5 +64,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 1019290
-fake_password:
-- 101202081
