--- a/data/cards/25919316.yaml
+++ b/data/cards/25919316.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 25919316
 name:
   en: Pitknight Filly
   de:
@@ -67,5 +67,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 1019288
-fake_password:
-- 101202084
