--- a/data/cards/86553594.yaml
+++ b/data/cards/86553594.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 86553594
 name:
   en: Discordance of the Tistina
   de:
@@ -65,5 +65,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 1019295
-fake_password:
-- 101202092
