--- a/data/cards/87498729.yaml
+++ b/data/cards/87498729.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 87498729
 name:
   en: Fallen of the Tistina
   de:
@@ -67,5 +67,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 1019294
-fake_password:
-- 101202086
