--- a/data/cards/24892828.yaml
+++ b/data/cards/24892828.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 24892828
 name:
   en: Returned of the Tistina
   de:
@@ -66,5 +66,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 1019296
-fake_password:
-- 101202087
