--- a/data/cards/72270339.yaml
+++ b/data/cards/72270339.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 黑魔女 迪亚贝尔斯塔
 text:
   en: |-
-    You can Special Summon this card (from your hand) by sending 1 other card from your hand or field to the GY. You can only Special Summon "Diabellstar the Black Witch" once per turn this way. You can only use each of the following effects of "Diabellstar the Black Witch" once per turn. If this card is Normal or Special Summoned: You can Set 1 "Sinful Spoils" Spell/Trap directly from your Deck. During your opponent's turn, if this card is sent from its owner's hand or field to the GY: You can send 1 card from your hand or field to the GY, and if you do, Special Summon this card.
+    You can Special Summon this card (from your hand) by sending 1 card from your hand or field to the GY. You can only Special Summon "Diabellstar the Black Witch" once per turn this way. You can only use each of the following effects of "Diabellstar the Black Witch" once per turn. If this card is Normal or Special Summoned: You can Set 1 "Sinful Spoils" Spell/Trap directly from your Deck. During your opponent's turn, if this card is sent from its owner's hand or field to the GY: You can send 1 card from your hand or field to the GY, and if you do, Special Summon this card.
   de:
   es:
   fr:
@@ -42,6 +42,36 @@ images:
 - index: 1
   image: DiabellstartheBlackWitch-AGOV-JP-UR.png
 sets:
+  en:
+  - set_number: AGOV-EN006
+    set_name: Age of Overlord
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: AGOV-DE006
+    set_name: Age of Overlord
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: AGOV-FR006
+    set_name: Age of Overlord
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: AGOV-IT006
+    set_name: Age of Overlord
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: AGOV-PT006
+    set_name: Age of Overlord
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: AGOV-JP006
     set_name: Age of Overlord
