--- a/data/cards/yugipedia1012672.yaml
+++ b/data/cards/yugipedia1012672.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is Normal or Pendulum Summoned: You can target 1 card in your Pendulum Zone; destroy both it and this card, and if you do, add 1 Level 4 or lower Pendulum Monster from your Deck to your hand. You can only use this effect of "Pendulum Witch" once per turn. If this card in the Monster Zone is destroyed: You can place it in your Pendulum Zone.
+    If this card is Normal or Pendulum Summoned: You can target 1 card in your Pendulum Zone; destroy both it and this card, and if you do, add 1 Level 4 or lower Pendulum Monster from your Deck to your hand. You can only use this effect of "Pendulum Witch" once per turn. If this card in the Monster Zone is destroyed: You can place this card in your Pendulum Zone.
   de:
   es:
   fr:
