--- a/data/rush/18580.yaml
+++ b/data/rush/18580.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Normal Monster from your Graveyard to your field in face-up Defense Position. While the monster Special Summoned by this effect is face-up, it cannot attack.
+    Special Summon 1 Normal Monster from your Graveyard to your field in face-up Defense Position, but it cannot attack while it is face-up.
   de:
   es:
   fr:
@@ -53,7 +53,4 @@ sets:
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716704
