--- a/data/rush/18635.yaml
+++ b/data/rush/18635.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Super Rare
+  - set_number: RD/MRP2-JP090
+    set_name: Megaroad Pack 2
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/KP12-KR053
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
