--- a/data/rush/yugipedia1019283.yaml
+++ b/data/rush/yugipedia1019283.yaml
@@ -48,6 +48,7 @@ sets:
   - set_number: RD/MRP2-JP085
     set_name: Megaroad Pack 2
     rarities:
+    - Common
 is_translation_unofficial:
   name:
     en: true
