--- a/data/rush/18768.yaml
+++ b/data/rush/18768.yaml
@@ -42,6 +42,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Signature move
 images:
 - index: 1
   image: BBBBeastBraveBrandish-RDVSP1-JP-SR.png
