--- a/data/cards/09091064.yaml
+++ b/data/cards/09091064.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     If you reveal a card(s) in your hand to activate a "Vanquish Soul" card or effect (except during the Damage Step): You can Special Summon this card from your hand. (Quick Effect): You can activate 1 of these effects, by revealing monster(s) in your hand with the listed Attribute(s);
     ● FIRE: Change the battle position of 1 monster on the field.
-    ● FIRE & FIRE: Add 1 "Vanquish Soul" card from your Deck to your hand, except "Vanquish Soul Jiaolong".
+    ● 2 FIRE: Add 1 "Vanquish Soul" card from your Deck to your hand, except "Vanquish Soul Jiaolong".
     You can only use each effect of "Vanquish Soul Jiaolong" once per turn, and cannot activate more than 1 in the same Chain.
   de:
   es:
