--- a/data/cards/73602965.yaml
+++ b/data/cards/73602965.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 拉比丽斯的执事 亚莉安丝
 text:
   en: |-
-    During the Main Phase (Quick Effect): You can send this card from your hand or field to the GY; Special Summon 1 "Labrynth" monster, or Set 1 Normal Trap, from your hand. The Set Normal Trap can be activated this turn. When your opponent activates a card or effect in response to your card or effect activation of a Normal Trap or a "Labrynth" card, except "Labrynth Butler Arias" (Quick Effect): You can activate this effect in the GY; Special Summon this card. You can only use each effect of "Labrynth Butler Arias" once per turn.
+    During the Main Phase (Quick Effect): You can send this card from your hand or field to the GY; Special Summon 1 "Labrynth" monster, or Set 1 Normal Trap, from your hand. The Set Normal Trap can be activated this turn. When your opponent activates a card or effect in response to your card or effect activation of a Normal Trap or a "Labrynth" card, except "Arias the Labrynth Butler" (Quick Effect): You can activate this effect in the GY; Special Summon this card. You can only use each effect of "Arias the Labrynth Butler" once per turn.
   de:
   es:
   fr:
