--- a/data/cards/02526224.yaml
+++ b/data/cards/02526224.yaml
@@ -38,6 +38,10 @@ images:
 - index: 1
   image: FireKingHighAvatarKirin-SR14-JP-SR.png
 sets:
+  en:
+  - set_number: SR14-EN???
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
   ja:
   - set_number: SR14-JP002
     set_name: 'Structure Deck R: Onslaught of the Fire Kings'
