--- a/data/cards/65305978.yaml
+++ b/data/cards/65305978.yaml
@@ -34,6 +34,10 @@ images:
 - index: 1
   image: FireKingSanctuary-SR14-JP-SR.png
 sets:
+  en:
+  - set_number: SR14-EN???
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
   ja:
   - set_number: SR14-JP024
     set_name: 'Structure Deck R: Onslaught of the Fire Kings'
