--- a/data/cards/64182380.yaml
+++ b/data/cards/64182380.yaml
@@ -41,6 +41,10 @@ images:
 - index: 1
   image: GarunixEternityHyangoftheFireKings-SR14-JP-UR.png
 sets:
+  en:
+  - set_number: SR14-EN???
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
   ja:
   - set_number: SR14-JPP01
     set_name: "Structure Deck R: Onslaught of the Fire Kings Second Coming of the Eternal Flames' Ruler Pack"
