--- a/data/cards/90681088.yaml
+++ b/data/cards/90681088.yaml
@@ -38,6 +38,10 @@ images:
 - index: 1
   image: LegendaryFireKingPonix-SR14-JP-SR.png
 sets:
+  en:
+  - set_number: SR14-EN???
+    set_name: 'Structure Deck: Fire Kings'
+    rarities:
   ja:
   - set_number: SR14-JPP02
     set_name: "Structure Deck R: Onslaught of the Fire Kings Second Coming of the Eternal Flames' Ruler Pack"
