--- a/rush.yaml
+++ b/rush.yaml
@@ -120653,6 +120653,63 @@ yugipedia_page_id: 1019464
 ---
 konami_id:
 name:
+  en: Gias x Gias
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ギアス×ギアス
+  ja_romaji: Giasu × Giasu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 monster from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    1 face-up monster on your opponent's field loses 1500 ATK until the end of this turn. Then, you can choose 1 face-up monster on your field with the same Level and Type as that monster. If you do, that monster on your field can attack twice this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: GiasxGias-RDMRP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/MRP2-JP032
+    set_name: Megaroad Pack 2
+    rarities:
+    - Ultra Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1019492
+---
+konami_id:
+name:
   en: Time Wizard
   de:
   es:
