--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -25,25 +25,13 @@
 - yugipedia: 10276
   fake_password: 10000100
 ## Prereleases
-# Age of Overlord
-- set_abbreviation: AGOV
-  fake_password_range:
-    - 101202000
 # Phantom Nightmare
 - set_abbreviation: PHNI
   fake_password_range:
     - 101203000
-# Deck Build Pack: Valiant Smashers
-- set_abbreviation: DBVS
-  fake_password_range:
-    - 100433000
-# Structure Deck R: Onslaught of the Fire Kings
-- set_abbreviation: SR14
-  fake_password_range:
-    - 100314000
-# Blaze, Supreme Ruler of Dragons
-- yugipedia: 1004769
-  fake_password: 100200243
+# Pendulum Witch
+- yugipedia: 1012672
+  fake_password: 100200244
 # Terminal World
 - set_abbreviation: TW01
   fake_password_range: 100301000
