--- a/data/rush/yugipedia1019492.yaml
+++ b/data/rush/yugipedia1019492.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札のモンスター１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示モンスター１体を選び、その攻撃力をターン終了時まで１５００ダウンする。その後、選んだモンスターと同じレベルと種族を持つ自分フィールドの表側表示モンスター１体を選ぶ事ができる。選んだ場合、このターン、その自分のモンスターは２回攻撃できる。
   ko:
   zh-TW:
   zh-CN:
