--- a/data/cards/25919316.yaml
+++ b/data/cards/25919316.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Effect Monsters
-    If this card is Special Summoned to a zone a Link Monster points to: You can target 1 monster you control with 1500 or less ATK; this turn, it can make a second attack during each Battle Phase, also if it battles an opponent's monster, any battle damage it inflicts to your opponent is doubled. During the Standby Phase of the next turn after this card was destroyed by battle or card effect and was sent to the GY: You can Special Summon this card. You can only use each effect of "Pitknight Filly" once per turn.
+    If this card is Special Summoned to a zone a Link Monster points to: You can target 1 monster you control with 1500 or less ATK; this turn, it can make a second attack during each Battle Phase, also if it battles an opponent's monster, any battle damage it inflicts to your opponent is doubled. During the Standby Phase of the next turn after this card was destroyed by battle or card effect and sent to the GY: You can Special Summon this card. You can only use each effect of "Pitknight Filly" once per turn.
   de:
   es:
   fr:
