--- a/data/cards/yugipedia1019566.yaml
+++ b/data/cards/yugipedia1019566.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: スネークアイ<ruby>追<rt>つい</rt></ruby><ruby>放<rt>ほう</rt></ruby><ruby>劇<rt>げき</rt></ruby>
-  ja_romaji: Sunēkuai Tsuihōgeki
+  ja: スネークアイ<ruby>追<rt>つい</rt></ruby><ruby>走<rt>そう</rt></ruby><ruby>劇<rt>げき</rt></ruby>
+  ja_romaji: Sunēkuai Tsuisōgeki
   ko:
   ko_rr:
   zh-TW:
