--- a/data/cards/yugipedia1019547.yaml
+++ b/data/cards/yugipedia1019547.yaml
@@ -32,7 +32,7 @@ attribute: DARK
 rank: 6
 atk: 2700
 def: 0
-materials: 2+ Level 6 monsters
+materials: 2 or more Level 6 monsters
 series:
 - Goblin
 images:
