--- a/data/cards/yugipedia1019500.yaml
+++ b/data/cards/yugipedia1019500.yaml
@@ -1,7 +1,7 @@
 konami_id:
 password:
 name:
-  en: Rumble Teufel
+  en: Rumpel Teufel
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Declare 1 Monster Card name; neither player can Special Summon monsters with that original name for the rest of this turn, except from the GY. You can banish this card from your GY and declare 1 Monster Card name; neither player can activate the effects of monsters on the field with that original name for the rest of this turn. You can only use 1 "Rumble Teufel" effect per turn, and only once that turn.
+    Declare 1 Monster Card name; neither player can Special Summon monsters with that original name for the rest of this turn, except from the GY. You can banish this card from your GY and declare 1 Monster Card name; neither player can activate the effects of monsters on the field with that original name for the rest of this turn. You can only use 1 "Rumpel Teufel" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -29,7 +29,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: RumbleTeufel-PHNI-JP-OP.png
+  image: RumpelTeufel-PHNI-JP-OP.png
 sets:
   ja:
   - set_number: PHNI-JP078
