--- a/data/rush/15607.yaml
+++ b/data/rush/15607.yaml
@@ -1,6 +1,6 @@
 konami_id: 15607
 name:
-  en: Kuripotriple
+  en: Kuribotriple
   de: Kuripotriple
   es: Kuripotriple
   fr: Triplekuripo
@@ -52,7 +52,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: Kuripotriple-RDMAX1-JP-R.png
+  image: Kuribotriple-RDMAX1-JP-R.png
 sets:
   ja:
   - set_number: RD/MAX1-JP005
