--- a/rush.yaml
+++ b/rush.yaml
@@ -11487,7 +11487,7 @@ yugipedia_page_id: 716584
 ---
 konami_id: 15607
 name:
-  en: Kuripotriple
+  en: Kuribotriple
   de: Kuripotriple
   es: Kuripotriple
   fr: Triplekuripo
@@ -11539,7 +11539,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: Kuripotriple-RDMAX1-JP-R.png
+  image: Kuribotriple-RDMAX1-JP-R.png
 sets:
   ja:
   - set_number: RD/MAX1-JP005
