--- a/data/cards/yugipedia1020460.yaml
+++ b/data/cards/yugipedia1020460.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can add 1 Fish monster from your Deck to your hand, except "Psiics, Moonlight of the Ghoti", then banish 1 Fish monster from your hand or face-up field. If this card is banished: You can banish 1 Fish monster from your hand, face-up field, or GY, except "Moonlight of the Ghoti"; Special Summon this card. You can only use each effect of "Psiics, Moonlight of the Ghoti" once per turn.
+    If this card is Normal or Special Summoned: You can add 1 Fish monster from your Deck to your hand, except "Psiics, Moonlight of the Ghoti", then banish 1 Fish monster from your hand or face-up field. If this card is banished: You can banish 1 Fish monster from your hand, face-up field, or GY, except "Psiics, Moonlight of the Ghoti"; Special Summon this card. You can only use each effect of "Psiics, Moonlight of the Ghoti" once per turn.
   de:
   es:
   fr:
