--- a/data/rush/18387.yaml
+++ b/data/rush/18387.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: マジックミラー・ユース
-  ja_romaji: Majikkumirā Yūsu
+  ja_romaji: Majikku Mirā Yūsu
   ko: 매직미러 유스
   ko_rr:
   zh-TW:
