--- a/rush.yaml
+++ b/rush.yaml
@@ -78424,8 +78424,6 @@ sets:
     rarities:
     - Common
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 712974
@@ -78552,8 +78550,6 @@ sets:
     rarities:
     - Common
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 714667
@@ -78574,7 +78570,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A dragon whelp with endless possibilities. It yearns for the vast and endless VR world created by goggles.
+    A dragon child with hidden potential. It dreams of those goggles that show a vast virtual world.'
   de:
   es:
   fr:
@@ -78608,11 +78604,6 @@ sets:
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 712658
 ---
 konami_id: 17953
@@ -89610,7 +89601,7 @@ name:
   it:
   pt:
   ja: マジックミラー・ユース
-  ja_romaji: Majikkumirā Yūsu
+  ja_romaji: Majikku Mirā Yūsu
   ko: 매직미러 유스
   ko_rr:
   zh-TW:
