--- a/data/cards/yugipedia1020540.yaml
+++ b/data/cards/yugipedia1020540.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>Ａ・Ｏ・Ｇ<rt>アームズ・オブ・ジェネクス</rt></ruby> リターンゼロ
-  ja_romaji: Āmuzu obu Genekusu Ritān Zero
+  ja_romaji: Āmuzu Obu Jenekusu Ritān Zero
   ko:
   ko_rr:
   zh-TW:
