--- a/data/rush/yugipedia1012486.yaml
+++ b/data/rush/yugipedia1012486.yaml
@@ -6,8 +6,8 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>最<rt>サイ</rt></ruby><ruby>強<rt>キョー</rt></ruby><ruby>旗<rt>き</rt></ruby><ruby>獣<rt>じゅう</rt></ruby>ボルトライコーン
-  ja_romaji: Saikyōkijū Borutoraikōn
+  ja: <ruby>最<rt>サイ</rt></ruby><ruby>強<rt>キョー</rt></ruby><ruby>旗<rt>キ</rt></ruby><ruby>獣<rt>ジュウ</rt></ruby>ボルトライコーン
+  ja_romaji: Saikyōkijuu Borutoraikōn
   ko:
   ko_rr:
   zh-TW:
