--- a/data/rush/yugipedia1019492.yaml
+++ b/data/rush/yugipedia1019492.yaml
@@ -43,6 +43,8 @@ property: Normal
 images:
 - index: 1
   image: GiasxGias-RDMRP2-JP-OP.png
+- index: 2
+  image: GiasxGias-RDMRP2-JP-OP-AA.png
 sets:
   ja:
   - set_number: RD/MRP2-JP032
