--- a/rush.yaml
+++ b/rush.yaml
@@ -1130,7 +1130,7 @@ images:
 - index: 4
   image: MultistrikeDragonDragias-RDCCC1-JP-NPR.png
 - index: 5
-  image: MultistrikeDragonDragias-RDMRP2-JP-OP.png
+  image: MultistrikeDragonDragias-RDMRP2-JP-OP-AA.png
   illustration: MultistrikeDragonDragias-DBR-JP-VG-artwork-2.png
 - index: 6
   image: MultistrikeDragonDragias-RDECG1-JP-OP.png
@@ -3150,7 +3150,7 @@ images:
 - index: 2
   image: PrimaGuitarnatheShiningSuperstar-RDCCC1-JP-NPR.png
 - index: 3
-  image: PrimaGuitarnatheShiningSuperstar-RDMRP2-JP-OP.png
+  image: PrimaGuitarnatheShiningSuperstar-RDMRP2-JP-OP-AA.png
 sets:
   ja:
   - set_number: RD/KP01-JP028
@@ -3264,7 +3264,7 @@ images:
   image: YamirulertheDarkDelayer-RDSBD3-JP-C.png
   illustration: YamirulertheDarkDelayer-DBR-JP-VG-artwork.png
 - index: 2
-  image: YamirulertheDarkDelayer-RDMRP2-JP-OP.png
+  image: YamirulertheDarkDelayer-RDMRP2-JP-OP-AA.png
 sets:
   ja:
   - set_number: RD/KP01-JP029
@@ -120685,6 +120685,8 @@ property: Normal
 images:
 - index: 1
   image: GiasxGias-RDMRP2-JP-OP.png
+- index: 2
+  image: GiasxGias-RDMRP2-JP-OP-AA.png
 sets:
   ja:
   - set_number: RD/MRP2-JP032
