--- a/rush.yaml
+++ b/rush.yaml
@@ -41826,7 +41826,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 5 or 6 Dragon Type Normal Monster from your hand or Graveyard face-up to your field. Then, if you have "Sportsdragon Keeper" face-up on your field, you can add 1 "Sportsdragon Striker" or "Sportsdragon Defender" from your Graveyard to your hand.
+    Special Summon 1 Level 5 or 6 Dragon Type Normal Monster from your hand or Graveyard face-up to your field. Then, if you have "Sportsdragon Keeper" face-up on your field, you can add 1 "Sportsdragon Striker" or 1 "Sportsdragon Defender" from your Graveyard to your hand.
   de:
   es:
   fr:
