--- a/data/cards/yugipedia1020602.yaml
+++ b/data/cards/yugipedia1020602.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    During your opponent's Main Phase, if this card is in your hand (Quick Effect): You can target 1 Dragon Synchro Monster in your GY; Special Summon this card, and if you do, Special Summon that target (but its effects are negated), then, immediately after this effect resolves, you can Synchro Summon 1 Dragon Synchro Monster using this card you control. You can only use this effect of "Shining Star Dragon" once per turn. A Dragon monster Synchro Summoned using this card as material cannot be destroyed by battle.
+    During your opponent's Main Phase, if this card is in your hand (Quick Effect): You can target 1 Dragon Synchro Monster in your GY; Special Summon this card, and if you do, Special Summon the targeted monster (but its effects are negated), then, immediately after this effect resolves, you can Synchro Summon 1 Dragon Synchro Monster using this card you control. You can only use this effect of "Shining Star Dragon" once per turn. A Dragon Synchro Monster that was Summoned using this card as material cannot be destroyed by battle.
   de:
   es:
   fr:
