--- a/data/rush/17555.yaml
+++ b/data/rush/17555.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: ファンシー・テントウ・パステル
   ja_romaji: Fanshī Tentou Pasuteru
-  ko:
+  ko: 팬시 무당 파스텔
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   pt:
   ja: |-
     背中のハートがトレードマークの心優しきテントウムシ。触れると恋が叶うと言われている。
-  ko:
+  ko: |-
+    등 뒤의 하트가 트레이드마크인 마음씨 좋은 무당벌레. 만지면 사랑이 이루어진다고 한다.
   zh-TW:
   zh-CN:
 card_type: Monster
