--- a/data/rush/17556.yaml
+++ b/data/rush/17556.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 데몬 비버
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   pt:
   ja: |-
     悪魔のツノと翼を持つビーバー。どんぐりを投げつけて攻撃する。
-  ko:
+  ko: |-
+    악마의 뿔과 날개를 가진 비버. 도토리를 던져서 공격한다.
   zh-TW:
   zh-CN:
 card_type: Monster
