--- a/data/rush/17558.yaml
+++ b/data/rush/17558.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 동방의 영웅
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   pt:
   ja: |-
     遥か東の国から来たと言われているサムライ。手にするカタナは良く切れる。
-  ko:
+  ko: |-
+    먼 동쪽 나라에서 왔다고 전해지는 사무라이. 손에 쥔 칼은 잘 든다.
   zh-TW:
   zh-CN:
 card_type: Monster
