--- a/data/rush/17839.yaml
+++ b/data/rush/17839.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: <ruby>砂場の魔女<rt>スナバ・ウィッチ</rt></ruby>
   ja_romaji: Sunaba Wicchi
-  ko:
+  ko: 모래사장의 마녀
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   pt:
   ja: |-
     水を操り砂を固める魔法使い。泥だらけの手であらゆる物を生成する。
-  ko:
+  ko: |-
+    물을 조종해 모래를 굳히는 마법사. 진흙 투성이의 손으로 온갖 것들을 생성해낸다.
   zh-TW:
   zh-CN:
 card_type: Monster
