--- a/data/rush/17841.yaml
+++ b/data/rush/17841.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: ミニハープの<ruby>精<rt>せい</rt></ruby>
   ja_romaji: Minihāpu no Sei
-  ko:
+  ko: 미니하프의 정령
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   pt:
   ja: |-
     発表会でハープをかなでる精霊。その音色はまわりの心をなごます。
-  ko:
+  ko: |-
+    발표회에서 하프를 연주하는 정령. 그 음색은 모든 이의 마음을 온화하게 해준다.
   zh-TW:
   zh-CN:
 card_type: Monster
