--- a/data/rush/17557.yaml
+++ b/data/rush/17557.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: ドリーム・テントウ・レインボー
   ja_romaji: Dorīmu Tentou Reinbō
-  ko:
+  ko: 드림 무당 레인보우
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   pt:
   ja: |-
     背中の星がトレードマークの感情豊かなテントウムシ。虹の軌跡を描きながら今日も幸せを届ける。
-  ko:
+  ko: |-
+    등 뒤의 별이 트레이드마크인 풍부한 감정의 무당벌레. 무지갯빛 궤적을 그리면서 오늘도 행복을 전달한다.
   zh-TW:
   zh-CN:
 card_type: Monster
