--- a/data/rush/17559.yaml
+++ b/data/rush/17559.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 킬러 팬더
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   pt:
   ja: |-
     常に太い竹を一本持っており、性格は非常に凶暴である。
-  ko:
+  ko: |-
+    두꺼운 대나무 한 자루를 늘 가지고 다니며, 성격은 상당히 흉폭하다.
   zh-TW:
   zh-CN:
 card_type: Monster
