--- a/data/rush/17842.yaml
+++ b/data/rush/17842.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: <ruby>邪<rt>じゃ</rt></ruby><ruby>犬<rt>けん</rt></ruby><ruby>抜<rt>ばっ</rt></ruby><ruby>刀<rt>とう</rt></ruby>アイクチワワ
   ja_romaji: Jakenbattō Aikuchiwawa
-  ko:
+  ko: 사견발도 아이쿠치와와
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   pt:
   ja: |-
     つぶらな瞳で敵を油断させ懐に入り込む邪犬。忠誠心はボチボチ。
-  ko:
+  ko: |-
+    동그란 눈망울로 적을 방심시켜 기습적으로 파고드는 사견. 충성심은 그럭저럭.
   zh-TW:
   zh-CN:
 card_type: Monster
