--- a/data/rush/18581.yaml
+++ b/data/rush/18581.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 만능지뢰 회색안개
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     相手モンスターの攻撃宣言時に発動できる。
-  ko:
+  ko: |-
+    상대 몬스터의 공격 선언시에 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     相手フィールドの攻撃表示モンスターの内、攻撃力が一番高いモンスター１体を選んで破壊する。
-  ko:
+  ko: |-
+    상대 필드의 공격 표시 몬스터 중, 공격력이 가장 높은 몬스터 1장을 고르고 파괴한다.
   zh-TW:
   zh-CN:
 card_type: Trap
