--- a/data/rush/15159.yaml
+++ b/data/rush/15159.yaml
@@ -38,7 +38,7 @@ atk: 0
 def: 1400
 images:
 - index: 1
-  image: StrayngeCat-RDSBD1-JP-C.png
+  image: StrayngeCat-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/ST01-JP010
