--- a/data/rush/15433.yaml
+++ b/data/rush/15433.yaml
@@ -58,7 +58,7 @@ series:
 - Psychic Musician
 images:
 - index: 1
-  image: Romanpick-RDMRP1-JP-C.png
+  image: Romanpick-RDMRP2-JP-ScR.png
 sets:
   ja:
   - set_number: RD/KP02-JP023
