--- a/data/rush/15657.yaml
+++ b/data/rush/15657.yaml
@@ -53,7 +53,7 @@ property: Normal
 legend: true
 images:
 - index: 1
-  image: ShieldSword-RDCP01-JP-ScR.png
+  image: ShieldSword-RDMRP2-JP-R.png
 sets:
   ja:
   - set_number: RD/CP01-JP009
