--- a/data/rush/yugipedia1018683.yaml
+++ b/data/rush/yugipedia1018683.yaml
@@ -53,6 +53,7 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
