--- a/data/rush/16175.yaml
+++ b/data/rush/16175.yaml
@@ -52,7 +52,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: SwordShield-RDKP04-JP-SR.png
+  image: SwordShield-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/KP04-JP052
