--- a/data/rush/yugipedia1006320.yaml
+++ b/data/rush/yugipedia1006320.yaml
@@ -49,6 +49,7 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
