--- a/data/rush/yugipedia1012486.yaml
+++ b/data/rush/yugipedia1012486.yaml
@@ -55,6 +55,7 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
