--- a/data/rush/yugipedia1012490.yaml
+++ b/data/rush/yugipedia1012490.yaml
@@ -71,6 +71,7 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
