--- a/data/rush/yugipedia1012505.yaml
+++ b/data/rush/yugipedia1012505.yaml
@@ -51,6 +51,7 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
